[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/FishCoin.png" type="Texture" id=1]
[ext_resource path="res://attacks/projectiles/BlackHoleProjectile.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 132, 132 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 67.0298

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="PullArea" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
